salesforce/force-app/main/default/objects/Supplier_Profile__c/Supplier_Profile__c.object-meta.xml
<CustomObject>
    <description>Extended compliance attributes for Supplier Account</description>
    <label>Supplier Profile</label>
    <nameField>
        <displayFormat>SP-{000000}</displayFormat>
        <label>Supplier Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>