salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Master relationship to the Supplier Account record</description>
    <label>Supplier Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Profiles</relationshipLabel>
    <relationshipName>Supplier_Profiles_c</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>