salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Commodity_Category__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Category__c</fullName>
    <description>Used to capture the category of commodity</description>
    <label>Commodity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNSPSC L2 category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>