salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <description>Business criticality of this supplier</description>
    <label>Criticality</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>