salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Used to capture the source system of the supplier</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Self-Service Portal</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>