salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Strategic_Region__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Region__c</fullName>
    <description>Primary strategic region for compliance rule triggering</description>
    <label>Strategic Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>