salesforce/force-app/main/default/objects/Supplier_Profile__c/fields/Supplier_Tier__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Tier__c</fullName>
    <description>Tier level of the supplier in the supply chain</description>
    <label>Supplier Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier_1</fullName>
                <label>Tier 1 - Strategic</label>
            </value>
            <value>
                <fullName>Tier_2</fullName>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier_3</fullName>
                <label>Tier 3</label>
            </value>
            <value>
                <fullName>Tier_N</fullName>
                <label>Tier N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>